--- a/app/src/main/res/layout/list_item_event.xml
+++ b/app/src/main/res/layout/list_item_event.xml
@@ -35,12 +35,35 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/eventActor"
+                android:id="@+id/prAction"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:maxLines="3"
-                android:paddingRight="16dp"
-                android:textColor="#000" />
+                android:layout_gravity="top"
+                android:paddingRight="16dp" />
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/eventActor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:maxLines="3"
+                    android:paddingRight="6dp"
+                    android:textColor="#000" />
+
+                <ImageView
+                    android:id="@+id/actorAvatar"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
+
+            </LinearLayout>
+
+
         </LinearLayout>
 
 
